Fixed column spacing for mobile width.

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -70,6 +70,10 @@ hr { display: block; height: 1px;
     border: 0; border-top: 1px solid #999999;
     margin: 1em 0; padding: 0; }
 
+hr.home-hr {
+  margin-bottom: 0;
+}
+
 /* Main marketing message and sign up button */
 .hero-unit h1 {
   font-size: 72px;
@@ -102,7 +106,7 @@ hr { display: block; height: 1px;
 
 /* Supporting marketing content */
 .marketing {
-  margin: 25px 0;
+  margin: 0 0;
   color: #66626B;
 }
 
@@ -119,6 +123,10 @@ hr { display: block; height: 1px;
 
 .marketing h4 {
   margin-top: 30px;
+}
+
+.marketing .span6 {
+  margin-top: 25px;
 }
 
 /*Sub page containers*/
